crates/arteziac/tests/snapshots/codegen__cg_const_return.snap
---
source: crates/arteziac/tests/codegen.rs
expression: "check(\"func answer() -> Int { return 42; }\")"
---
; ModuleID = 'artezia'
source_filename = "artezia"

define i64 @answer() {
bb0:
  ret i64 42
}
