crates/arteziac/tests/snapshots/codegen__cg_struct_out_of_order.snap
---
source: crates/arteziac/tests/codegen.rs
expression: "check(\"struct P { x: Int, y: Bool } func main() -> Int { let p = P { y: true, x: 1 }; return p.x; }\")"
---
; ModuleID = 'artezia'
source_filename = "artezia"

define i64 @main() {
bb0:
  %p = alloca { i64, i1 }, align 8
  store { i64, i1 } { i64 1, i1 true }, ptr %p, align 4
  %load = load { i64, i1 }, ptr %p, align 4
  %field = extractvalue { i64, i1 } %load, 0
  ret i64 %field
}
